--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,11 @@ env.bak/
 venv.bak/
 tiktok_env/
 
+# Videos and Frames
+ML/frames
+ML/download
+ML/key.py
+
 # Spyder project settings
 .spyderproject
 .spyproject
