feat: add aws env key and config

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
+# Authentication
 JWT_SECRET_KEY=
 JWT_ACCESS_TOKEN_EXPIRATION=
 JWT_REFRESH_TOKEN_EXPIRATION=
+
+# Database
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+
+# AWS S3
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
