feat: load open ai key

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,4 @@
-# Authentication
-JWT_SECRET_KEY=
-JWT_ACCESS_TOKEN_EXPIRATION=
-JWT_REFRESH_TOKEN_EXPIRATION=
-
-# Database
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
+# DATABASE
 POSTGRES_URL=
 
 # AWS S3
@@ -16,3 +8,6 @@ AWS_SECRET_ACCESS_KEY=
 # CELERY
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND=redis://redis:6379/0
+
+# OPENAI
+OPENAI_API_KEY=
